fix: 修改了表单字体颜色，更改了overflow，（救救我的表单

--- a/src/css/wf-form.less
+++ b/src/css/wf-form.less
@@ -1,9 +1,9 @@
 #wf-form {
-    display: none;//默认不显示
+    display: none; //默认不显示
     //background-image: url("../../img/form-bac.jpg");
     overflow: hidden;
     text-align: center;
-    width:100vw;
+    width: 100vw;
     height: 100%;
     display: flex;
     position: relative;
@@ -25,10 +25,10 @@
         //display: none;
         //background-color: cadetblue;
         //right: -16rem;
-        background-image: linear-gradient(to top,rgb(176,176,176),rgb(196,201,221),rgb(158,166,185),rgb(138,149,167));
+        background-image: linear-gradient(to top, rgb(176, 176, 176), rgb(196, 201, 221), rgb(158, 166, 185), rgb(138, 149, 167));
         padding-top: 2rem;
         // position: absolute;
-        color: white;
+        color: black;
         z-index: 1;
         //text-align: center;
         width: 100%;
@@ -36,12 +36,14 @@
         transform: translate(16rem);
         position: relative;
         //transition: all 1s;
-        overflow: hidden;
+        overflow-x: hidden;
+
         .red-form {
             color: red;
             width: 70px;
             margin-left: 2rem;
         }
+
         .need:after {
             //必填项加红色星号
             content: '* ';
@@ -67,6 +69,7 @@
                 text-align: left;
                 padding-left: 0.5rem;
                 width: 100%;
+
                 //display: inline;
                 select {
                     width: 5rem;
@@ -83,10 +86,12 @@
                     display: block;
                     //vertical-align: middle;
                 }
-                label{
+
+                label {
                     letter-spacing: 2px;
                     font-weight: lighter;
                 }
+
                 .groups-la {
                     padding-left: 2rem;
                     width: 10rem;
@@ -131,14 +136,16 @@
         width: 100%;
         height: 100%;
         //background-color: rgba(202, 165, 165, 0.5);
-        overflow: hidden;
-        background-image: linear-gradient(to bottom,rgb(176,176,176),rgb(196,201,221),rgb(158,166,185),rgb(138,149,167));
+        overflow-x: hidden;
+        background-image: linear-gradient(to bottom, rgb(176, 176, 176), rgb(196, 201, 221), rgb(158, 166, 185), rgb(138, 149, 167));
         align-self: center;
+
         .red-form {
             color: red;
             width: 70px;
             margin-left: 5rem;
         }
+
         // text-align: left;
         .center {
             margin: 0 auto;
